[metadata]
name = NESP-Lib
description = New Era Syringe Pump Library for Python
author = Florian Lapp
author_email = e5abed0c@gmail.com
license = MIT
license_files = LICENSE.txt
keywords = New-Era-Pump-Systems, Syringe-Pump
url = https://github.com/florian-lapp/nesp-lib-py
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: nesp_lib.VERSION
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = nesp_lib
install_requires = pyserial